--- a/webapp/index.html
+++ b/webapp/index.html
@@ -21,10 +21,10 @@
             background-color: var(--bg-color);
             color: var(--text-color);
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
+            margin: 0;
         }
 
         .container {
