--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,6 +14,8 @@
             --button-color: var(--tg-theme-button-color, #2ea6ff);
             --button-text-color: var(--tg-theme-button-text-color, #ffffff);
             --secondary_bg_color: var(--tg-theme-secondary-bg-color, #f0f0f0);
+            --section_separator_color: var(--tg-theme-section-separator-color, #e0e0e0);
+            --section_bg_color: var(--tg-theme-section-bg-color, #f9f9f9);
         }
 
         body {
@@ -28,6 +30,7 @@
         }
 
         .container {
+            background-color: var(--section_bg_color);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -69,9 +72,10 @@
             padding: 10px;
             font-size: 16px;
             width: 100px;
-            border: 1px solid #ddd;
+            border: var(--section_separator_color);
             border-radius: 5px;
-            background-color: var(--secondary_bg_color);
+            background-color: var(--bg-color);
+            color: var(--text-color);
         }
 
         .status {
