--- a/src/market/index.html
+++ b/src/market/index.html
@@ -11,8 +11,8 @@
     <style>
         :root {
             --tg-bg: var(--tg-theme-bg-color, #ffffff);
-            --tg-card: #fff;
-            --tg-text: var(--tg-theme-text-color, #111);
+            --tg-card: var(--tg-theme-section-bg-color, #f9f9f9);
+            --tg-text: var(--tg-theme-text-color, #000000);
             --tg-hint: var(--tg-theme-hint-color, #707070);
             --accent: var(--tg-theme-button-color, #2ea6ff);
         }
@@ -48,7 +48,8 @@
 
         .title {
             font-size: 20px;
-            font-weight: 700
+            font-weight: 700;
+            color: var(--tg-text);
         }
 
         .desc {
