--- a/src/market/index.html
+++ b/src/market/index.html
@@ -15,6 +15,7 @@
             --tg-text: var(--tg-theme-text-color, #000000);
             --tg-hint: var(--tg-theme-hint-color, #707070);
             --accent: var(--tg-theme-button-color, #2ea6ff);
+            --section_bg_color: var(--tg-theme-section-bg-color, #f9f9f9);
         }
 
         * {
@@ -33,7 +34,7 @@
         }
 
         .card {
-            background: var(--tg-card);
+            background-color: var(--section_bg_color);
             border-radius: 14px;
             padding: 14px;
             box-shadow: 0 6px 20px rgba(22, 27, 33, 0.06);
