--- a/src/market/market.html
+++ b/src/market/market.html
@@ -74,7 +74,7 @@
         }
 
         .product-card {
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0.9), rgba(250, 250, 250, 0.9));
+            background: var(--card);
             border-radius: 14px;
             padding: 12px;
             box-shadow: 0 10px 30px rgba(22, 30, 50, 0.06);
@@ -151,7 +151,7 @@
         }
 
         .tab.active {
-            background: linear-gradient(180deg, var(--accent), #1b8ad8);
+            background: linear-gradient(180deg, var(--accent), #3498db);
             color: #fff;
             box-shadow: 0 18px 40px rgba(240, 160, 20, 0.18);
             transform: translateY(-6px)
