--- a/src/market/market.html
+++ b/src/market/market.html
@@ -173,7 +173,7 @@
             border-radius: 12px;
             background: var(--section_bg_color);
             box-shadow: 0 8px 30px rgba(12, 16, 20, 0.04);
-            border: var(--section_separator_color);
+            border: 1px solid rgba(12, 16, 20, 0.03)
         }
 
         .search-box {
@@ -185,7 +185,7 @@
             flex: 1;
             padding: 12px;
             border-radius: 12px;
-            border: var(--section_separator_color);
+            border: 1px solid #e7ebf0;
             background: transparent
         }
 
@@ -212,7 +212,7 @@
             align-items: center;
             padding: 12px;
             border-radius: 12px;
-            background: var(--section_bg_color);
+            background: var(--card);
             box-shadow: 0 8px 20px rgba(12, 16, 20, 0.03);
             border: 1px solid rgba(12, 16, 20, 0.03)
         }
