feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -12,10 +12,10 @@
         :root {
             --bg: var(--tg-theme-bg-color, #ffffff);
             --card: var(--tg-theme-section-bg-color, #f9f9f9);
-            --text-color: var(--tg-theme-text-color, #000000);
+            --tg-text: var(--tg-theme-text-color, #000000);
             --hint-color: var(--tg-theme-hint-color, #888888);
             --accent: var(--tg-theme-button-color, #2ea6ff); /* warm accent (like bot) */
-            --section_separator_color: var(--tg-theme-subtitle-text-color);
+            --section_separator_color: var(--tg-theme-subtitle-text-color, #e0e0e0);
             --soft: #f1f3f5;
             --radius: 16px;
             font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
