--- a/src/market/market.html
+++ b/src/market/market.html
@@ -10,12 +10,12 @@
     <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
     <style>
         :root {
-            --bg: var(--tg-theme-bg-color, #ffffff);
-            --card: var(--tg-theme-section-bg-color, #f9f9f9);
-            --tg-text: var(--tg-theme-text-color, #000000);
-            --hint-color: var(--tg-theme-hint-color, #888888);
-            --accent: var(--tg-theme-button-color, #2ea6ff); /* warm accent (like bot) */
-            --section_separator_color: var(--tg-theme-subtitle-text-color, #e0e0e0);
+            --bg: var(--tg-theme-bg-color);
+            --card: var(--tg-theme-section-bg-color);
+            --tg-text: var(--tg-theme-text-color);
+            --hint-color: var(--tg-theme-hint-color);
+            --accent: var(--tg-theme-button-color); /* warm accent (like bot) */
+            --section_separator_color: var(--tg-theme-subtitle-text-color);
             --soft: #f1f3f5;
             --radius: 16px;
             font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
@@ -58,7 +58,7 @@
         .brand h1 {
             margin: 0;
             font-size: 20px;
-            letter-spacing: -0.3px
+            letter-spacing: -0.3px;
             color: var(--tg-text);
         }
 
