feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -225,7 +225,8 @@
         }
 
         .category h3 {
-            margin: 0
+            margin: 0;
+            color: var(--tg-text);
         }
 
         .category p {
@@ -336,7 +337,7 @@
             align-items: center;
             padding: 12px;
             border-radius: 12px;
-            background: linear-gradient(180deg, #fff, #fbfbfc);
+            background: var(--card);
             border: 1px solid rgba(12, 16, 20, 0.03)
         }
 
@@ -381,7 +382,7 @@
         </div>
         <div>
             <button id="openTelegram"
-                    style="padding:8px 10px;border-radius:10px;border:1px solid rgba(12,16,20,0.04);background:linear-gradient(180deg,#fff,#f7f8fb);">
+                    style="padding:8px 10px;border-radius:10px;border:1px solid rgba(12,16,20,0.04);background:var(--soft);color:var(--hint-color);font-weight:700;font-size:13px;cursor:pointer;">
                 Open
             </button>
         </div>
