--- a/src/market/market.html
+++ b/src/market/market.html
@@ -162,7 +162,7 @@
         }
 
         .tab.active {
-            background: linear-gradient(90deg, var(--accent), #1b8ad8);
+            background: var(--accent);
             color: #fff;
             transform: translateY(-6px);
             box-shadow: 0 18px 40px rgba(26, 138, 216, 0.15)
