feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -171,7 +171,8 @@
         .tab button {
             background: none;
             border: 0;
-            font-size: 14px
+            font-size: 16px;
+            color: var(--tg-text);
         }
 
         /* search */
