--- a/src/market/market.html
+++ b/src/market/market.html
@@ -164,7 +164,7 @@
 
         .tab.active {
             background: var(--accent);
-            color: #fff;
+            color: var(--soft);
             transform: translateY(-6px);
             box-shadow: 0 18px 40px rgba(26, 138, 216, 0.15)
         }
@@ -174,6 +174,15 @@
             border: 0;
             font-size: 16px;
             color: var(--tg-text);
+        }
+
+        .tab .icon {
+            color: var(--text); /* основной цвет текста */
+            transition: color 0.2s;
+        }
+
+        .tab.active .icon {
+            color: var(--soft); /* активная вкладка — белый */
         }
 
         /* search */
@@ -325,7 +334,7 @@
 
         .size.active {
             background: var(--accent);
-            color: #fff
+            color: var(--soft);
         }
 
         .controls {
@@ -354,7 +363,7 @@
             border-radius: 12px;
             border: 0;
             background: var(--accent);
-            color: #fff;
+            color: var(--soft);
             width: 100%;
             font-weight: 800;
             box-shadow: 0 14px 40px rgba(26, 138, 216, 0.18)
@@ -388,7 +397,7 @@
 
         .badge {
             background: #ff4d4f;
-            color: #fff;
+            color: var(--soft);
             padding: 6px 10px;
             border-radius: 10px;
             font-weight: 700
@@ -448,26 +457,34 @@
         <div class="tabs">
             <div class="tab" data-tab="latest" title="So'nggi" tabindex="0">
                 <button>
-                    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/house.svg" alt="Главная"
-                         width="20" height="20"/>
+                    <svg class="icon" width="20" height="20" viewBox="0 0 16 16" aria-label="So'nggi"
+                         fill="currentColor">
+                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/house.svg"/>
+                    </svg>
                 </button>
             </div>
             <div class="tab" data-tab="search" title="Qidiruv" tabindex="0">
                 <button>
-                    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/search.svg" alt="Поиск"
-                         width="20" height="20"/>
+                    <svg class="icon" width="20" height="20" viewBox="0 0 16 16" aria-label="Qidiruv"
+                         fill="currentColor">
+                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/search.svg"/>
+                    </svg>
                 </button>
             </div>
             <div class="tab" data-tab="categories" title="Kategoriyalar" tabindex="0">
                 <button>
-                    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/grid.svg" alt="Категории"
-                         width="20" height="20"/>
+                    <svg class="icon" width="20" height="20" viewBox="0 0 16 16" aria-label="Категории"
+                         fill="currentColor">
+                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/grid.svg"/>
+                    </svg>
                 </button>
             </div>
             <div class="tab" data-tab="cart" title="Savat" tabindex="0">
                 <button>
-                    <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/cart.svg" alt="Корзина"
-                         width="20" height="20"/>
+                    <svg class="icon" width="20" height="20" viewBox="0 0 16 16" aria-label="Savat"
+                         fill="currentColor">
+                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/cart.svg"/>
+                    </svg>
                     <span id="cartCount"></span>
                 </button>
             </div>
