--- a/src/market/market.html
+++ b/src/market/market.html
@@ -473,9 +473,8 @@
             </div>
             <div class="tab" data-tab="categories" title="Kategoriyalar" tabindex="0">
                 <button>
-                    <svg class="icon" width="20" height="20" viewBox="0 0 16 16" aria-label="Категории"
-                         fill="currentColor">
-                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/grid.svg"/>
+                    <svg class="icon" width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
+                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/bootstrap-icons.svg#grid"/>
                     </svg>
                 </button>
             </div>
