feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -11,11 +11,11 @@
     <style>
         :root {
             /* Telegram theme variables (fallbacks provided) */
-            --tg-bg: #f6f8fb;
-            --tg-card: #ffffff;
-            --tg-text: #0f1724;
-            --tg-hint: #6b7280;
-            --tg-accent: #2a9df4;
+            /*--tg-bg: #f6f8fb;*/
+            /*--tg-card: #ffffff;*/
+            /*--tg-text: #0f1724;*/
+            /*--tg-hint: #6b7280;*/
+            /*--tg-accent: #2a9df4;*/
             --radius: 14px;
             --soft: #f4f6f8;
             --max-width: 420px;
@@ -24,11 +24,11 @@
 
         /* Respect Telegram dynamic colors if available */
         .tg-theme-aware {
-            --bg: var(--tg-theme-bg-color, var(--tg-bg));
-            --card: var(--tg-theme-section-bg-color, var(--tg-card));
-            --text: var(--tg-theme-text-color, var(--tg-text));
-            --hint: var(--tg-theme-hint-color, var(--tg-hint));
-            --accent: var(--tg-theme-button-color, var(--tg-accent));
+            --bg: var(--tg-theme-bg-color);
+            --card: var(--tg-theme-section-bg-color);
+            --text: var(--tg-theme-text-color);
+            --hint: var(--tg-theme-hint-color);
+            --accent: var(--tg-theme-button-color);
         }
 
         * {
