feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -151,7 +151,7 @@
         .tab {
             flex: 1;
             background: var(--card);
-            color: var(--tg-text);
+            color: var(--text);
             padding: 10px;
             border-radius: 14px;
             display: flex;
@@ -173,7 +173,7 @@
             background: none;
             border: 0;
             font-size: 16px;
-            color: var(--tg-text);
+            color: var(--text);
         }
 
         .tab .icon {
@@ -213,7 +213,7 @@
             border: 0;
             padding: 10px 14px;
             border-radius: 10px;
-            color: var(--tg-text);
+            color: var(--text);
             font-weight: 700
         }
 
