--- a/src/market/market.html
+++ b/src/market/market.html
@@ -205,7 +205,7 @@
             border: 0;
             padding: 10px 14px;
             border-radius: 10px;
-            color: var(--text);
+            color: var(--soft);
             font-weight: 700
         }
 
@@ -352,6 +352,7 @@
 
         .addbtn {
             padding: 12px;
+            margin: 20px;
             border-radius: 12px;
             border: 0;
             background: var(--accent);
@@ -738,7 +739,7 @@
             txt.innerHTML = `<div style="font-weight:800;color:var(--text)">${p.title}</div><div style="color:var(--hint)">${item.color ? item.color.name : ''} • ${item.size || ''}</div><div style="margin-top:8px;font-weight:800;color:var(--text)">${formatPrice(p.price)} x ${item.qty}</div>`;
             row.appendChild(txt);
             const actions = document.createElement('div');
-            actions.innerHTML = '<button style="background:transparent;border:0;font-size:8px"><img style="width:10px;height:10px" src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/x.svg" alt="Удалить" width="10" height="10" /></button>';
+            actions.innerHTML = '<button style="background:transparent;border:0;font-size:8px">X</button>';
             actions.querySelector('button').addEventListener('click', () => {
                 removeFromCart(item)
             });
