feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
     <title>Tirikchilik — Telegram WebApp UI (Improved)</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -450,31 +451,22 @@
         <div class="tabs">
             <div class="tab" data-tab="latest" title="So'nggi" tabindex="0">
                 <button>
-                    <svg class="icon" width="20" height="20" fill="currentColor">
-                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/bootstrap-icons.svg#house"></use>
-                    </svg>
+                    <i class="bi bi-house" style="font-size:20px;"></i>
                 </button>
             </div>
             <div class="tab" data-tab="search" title="Qidiruv" tabindex="0">
                 <button>
-                    <svg class="icon" width="20" height="20" fill="currentColor">
-                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/bootstrap-icons.svg#search"></use>
-                    </svg>
+                    <i class="bi bi-search" style="font-size:20px;"></i>
                 </button>
             </div>
             <div class="tab" data-tab="categories" title="Kategoriyalar" tabindex="0">
                 <button>
-                    <svg class="icon" width="20" height="20" fill="currentColor">
-                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/bootstrap-icons.svg#grid"></use>
-                    </svg>
+                    <i class="bi bi-grid-3x3-gap" style="font-size:20px;"></i>
                 </button>
             </div>
             <div class="tab" data-tab="cart" title="Savat" tabindex="0">
                 <button>
-                    <svg class="icon" width="20" height="20" fill="currentColor">
-                        <use href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/bootstrap-icons.svg#cart"></use>
-                    </svg>
-                    <span id="cartCount"></span>
+                    <i class="bi bi-cart" style="font-size:20px;"></i>
                 </button>
             </div>
         </div>
