feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -466,7 +466,9 @@
             </div>
             <div class="tab" data-tab="cart" title="Savat" tabindex="0">
                 <button>
-                    <i class="bi bi-cart" style="font-size:20px;"></i>
+                    <i class="bi bi-cart" style="font-size:20px; position:relative;">
+                        <span id="cartCount" style="position:absolute; top:-8px; right:-8px;"></span>
+                    </i>
                 </button>
             </div>
         </div>
