feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -174,7 +174,7 @@
             transition: color 0.2s;
         }
 
-        .tab.active .icon {
+        .tab.active .button {
             color: var(--soft); /* активная вкладка — белый */
         }
 
