feat: add registration bonus feature with claim endpoint and related models

--- a/src/market/market.html
+++ b/src/market/market.html
@@ -174,8 +174,12 @@
             transition: color 0.2s;
         }
 
-        .tab.active .button {
+        .tab.active button {
             color: var(--soft); /* активная вкладка — белый */
+        }
+
+        .tab.active i {
+            color: var(--soft);
         }
 
         /* search */
